# github_repo_analyzer

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py  rate_limit.py  schemas.py
backend/app/api/routes/: analysis.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/domain/: entities.py  repositories.py  services.py
backend/app/infrastructure/cache/: redis_cache.py
backend/app/infrastructure/database/: models.py  repositories.py  session.py
backend/app/infrastructure/jobs/: celery_app.py  celery_tasks.py  tasks.py
backend/app/usecases/: analyze_repository.py  get_analysis.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_domain_services.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AIInsightsPanel.tsx  CommitFrequencyChart.tsx  ContributorRanking.tsx  LanguagePieChart.tsx  MetricsGrid.tsx
frontend/src/pages/: AnalysisPage.tsx  HomePage.tsx
